--- a/笔记.md
+++ b/笔记.md
@@ -1,3 +1,46 @@
+
+# 节点
+- 根元素：html标签   
+- 节点：页面中所有的内容（标签、属性、文本），node
+  - 节点的属性：可以使用标签/元素'.'出来，可以使用属性节点'.'出来，可以使用文本节点'.'出来
+  - 文本包括：文字、换行、空格、回车
+
+1.  nodeType:节点的类型（数字与类型一一对应）：   
+    1. 标签
+    2. 属性
+    3. 文本
+2. nodeName:节点名字   
+    1. 标签节点：大写的标签名字
+    2. 属性节点：小写的属性名字
+    3. 文本节点：#text
+3. nodeValue:节点的值
+    1. 标签节点：null
+    2. 属性节点：属性值
+    3. 文本节点：文本内容   
+
+- 父节点：.parentNode   
+- 父级元素：.parentElement (父节点和父级元素的结果一样) 
+- 子节点：.childNodes (包含所有标签和文本)   
+- 子元素：.children (只包含所有标签) 
+
+以下谷歌和火狐都支持，IE8只支持节点，不支持元素，且节点变成元素：
+
+- 第一个子节点：.firstChild   
+- 第一个子元素：.firstElementChild   
+- 最后一个子节点：.lastChild   
+- 最后一个子元素：.lastElementChild   
+- 某个元素的前一个兄弟节点：.previousSibling   
+- 某个元素的前一个兄弟元素：.previousElementSibling   
+- 某个元素的后一个兄弟节点：.nextSibling   
+- 某个元素的后一个兄弟元素：.nextElementSibling
+
+总结：
+1. 凡是获取节点的代码，在谷歌和火狐得到的都是相关的节点
+2. 凡是获取元素的代码，在谷歌和火狐得到的都是相关的元素
+3. 从子节点和兄弟节点开始，凡是获取系欸但的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
+
+
+---
 # 为元素绑定多个事件
 - 参数1：事件的类型type---事件的名字，e.g. click,没有on   
 - 参数2：事件处理函数--（命名函数，匿名函数）   
