--- a/笔记.md
+++ b/笔记.md
@@ -4,7 +4,7 @@
 - 节点：页面中所有的内容（标签、属性、文本），node
   - 节点的属性：可以使用标签/元素'.'出来，可以使用属性节点'.'出来，可以使用文本节点'.'出来
   - 文本包括：文字、换行、空格、回车
-
+#### 节点
 1.  nodeType:节点的类型（数字与类型一一对应）：   
     1. 标签
     2. 属性
@@ -23,7 +23,7 @@
 - 子节点：.childNodes (包含所有标签和文本)   
 - 子元素：.children (只包含所有标签) 
 
-以下谷歌和火狐都支持，IE8只支持节点，不支持元素，且节点变成元素：
+#### 以下谷歌和火狐都支持，IE8只支持节点，不支持元素，且节点变成元素：
 
 - 第一个子节点：.firstChild   
 - 第一个子元素：.firstElementChild   
@@ -34,7 +34,7 @@
 - 某个元素的后一个兄弟节点：.nextSibling   
 - 某个元素的后一个兄弟元素：.nextElementSibling
 
-总结：
+#### 总结：
 1. 凡是获取节点的代码，在谷歌和火狐得到的都是相关的节点
 2. 凡是获取元素的代码，在谷歌和火狐得到的都是相关的元素
 3. 从子节点和兄弟节点开始，凡是获取系欸但的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
