add: notes元素创建的不同方式

--- a/笔记.md
+++ b/笔记.md
@@ -1,10 +1,10 @@
 
 # 节点
 - 根元素：html标签   
-- 节点：页面中所有的内容（标签、属性、文本），node
+- 节点node：页面中所有的内容（标签、属性、文本）
   - 节点的属性：可以使用标签/元素'.'出来，可以使用属性节点'.'出来，可以使用文本节点'.'出来
   - 文本包括：文字、换行、空格、回车
-#### 节点
+#### 节点的重要内容：
 1.  nodeType:节点的类型（数字与类型一一对应）：   
     1. 标签
     2. 属性
@@ -38,7 +38,27 @@
 1. 凡是获取节点的代码，在谷歌和火狐得到的都是相关的节点
 2. 凡是获取元素的代码，在谷歌和火狐得到的都是相关的元素
 3. 从子节点和兄弟节点开始，凡是获取系欸但的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
+---
+# 元素创建的不同方式
+1. document.write("标签的代码及内容");
+2. 对象.innerHTML="标签及代码"；
+3. document.createElement("标签的名字");
 
+- document write() 这种方式有缺陷，如果在页面加载完毕时，使用此方法创建元素，页面所有的东西都会被覆盖；
+- 对象.innerHTML的方式，点一次就加载一次，若把内容放在body里，则body里的其他内容会被覆盖，一般是放到其他父级元素里；
+~~~js
+//动态创建列表
+var names=["小红","小明","小花","小杨"]
+my$("btn").onclick=function(){
+    var str="<url style='list-style-type: none; cursor: pointer'>";
+    //根据循环列表创建对应对数的li
+    for (var i=0; i<names.length; i++){
+        str+="<li>"+names[i]+"</li>";
+    }
+    str+="</ul>";
+    my$("dv").innerHTML=str;
+}
+~~~
 
 ---
 # 为元素绑定多个事件
