add: more notes

--- a/笔记.md
+++ b/笔记.md
@@ -41,11 +41,10 @@
 ---
 # 元素创建的不同方式
 1. document.write("标签的代码及内容");
+    - document write() 这种方式有缺陷，如果在页面加载完毕时，使用此方法创建元素，页面所有的东西都会被覆盖；
 2. 对象.innerHTML="标签及代码"；
-3. document.createElement("标签的名字");
 
-- document write() 这种方式有缺陷，如果在页面加载完毕时，使用此方法创建元素，页面所有的东西都会被覆盖；
-- 对象.innerHTML的方式，点一次就加载一次，若把内容放在body里，则body里的其他内容会被覆盖，一般是放到其他父级元素里；
+    - 对象.innerHTML的方式，点一次就加载一次，若把内容放在body里，则body里的其他内容会被覆盖，一般是放到其他父级元素里；
 ~~~js
 //动态创建列表
 var names=["小红","小明","小花","小杨"]
@@ -59,6 +58,107 @@ my$("btn").onclick=function(){
     my$("dv").innerHTML=str;
 }
 ~~~
+3. document.createElement("标签的名字");   
+~~~js
+var pObj=document.createElement("p");//创建标签
+pObj.innerHTML="这是一个p";//设置标签内容
+my$("dv").appentChild(pObj);//把创建后的子元素追加到父级元素中
+~~~
+## 元素操作的相关方法
+- appendChild(); *追加子元素*   
+- insertBefore(newChild, refChild); *2个参数，把new插入到ref之前* 
+- replaceChild(newChild, refChild); *2个参数，用new替换掉ref*   
+- removeChild(); *移除元素*  
+## 案例
+1. 点击按钮删除所有子元素
+~~~js
+while (my$("dv").firstElementChild){
+    my$("dv").removeChild(my$("dv").fisrtElementChild);
+}
+~~~
+2. 只创建一个元素:有则删除/无则创建
+    1. 有则删除
+~~~js
+my$("btn").onclick=function(){
+    if(my$("btn2")){
+        my$("dv").removeChild(my("btn2"));
+    }
+    var obj=document.createElement("input");
+    obj.type="button";
+    obj.value="按钮";
+    obj.id="btn2";
+    my$("dv").appendChild(obj);
+}
+    2. 无则创建
+~~~js
+my$("btn").onclick=function(){
+    if(!my$("btn2")){
+        var obj=document.createElement("input");
+        obj.type="button";
+        obj.value="按钮"；
+        obj.id="btn2"；
+        my$("dv").appendChild(obj);
+    }
+}
+~~~
+
+3. 动态创建列表
+~~~js
+//点击按钮，动态创建列表，把列表加到div中
+my$("btn").onclick=function(){
+    //创建ul，把ul立刻加入到父级元素div中
+    var ulObj=document.createElement("ul");
+    my$("dv").appendChild(ulObj);
+    //动态创建li，加到ul中
+    for (var i=0; i<arr.length; i++){
+        var liObj=document.createElement("li");
+        //设置li中间的文字内容
+        liObj.innerHTML="arr[i]";
+        ulObj.appendChild(liObj);
+        //为li添加鼠标进入/离开事件
+        liObj.onmouseover=function(){
+            this.style.backgroundColor="red";
+        };
+        liObj.onmouseout=function(){
+            this.style.backgroundColor="";
+        };
+    }
+}
+~~~
+4. 动态创建表格   
+![](IMG/创建列表.png)
+~~~js
+var arr=[
+    {name:"百度", href:"http://www.baidu.com"},
+    {name:"谷歌", href:"http://www.google.com"},
+    {name:"优酷", href:"http://www.youku.com"},
+    {name:"土豆", href:"http://www.tudou.com"},
+    {name:"爱奇艺", href:"http://www.aiqiyi.com"}
+];
+my$("btn").onclick=function(){
+    //创建table加入到div中
+    var tableObj=document.createElement("table");
+    tableObj.cellpadding="0";
+    tableObj.cellspacing="0";
+    table.border="1";
+    my$("dv").appendChild(tableObj);
+    //创建行，把行加到table中
+    for (var i=0; i<arr.length; i++){
+        var dt=arr[i];//每个对象
+        var trObj=document.createElement("tr");
+        tableObj.appendChild(trObj);
+        //创建第一个列，然后加入到行中
+        var td1=document.createElement("td");
+        td1.innerText=dt.name;
+        trObj.appendChild(td1);
+        //创建第二个列
+        var td2=document.createElement("td");
+        td2.innerHTML="<a href="+dt.href+">"+dt.name+"</a>";
+        trObj.appendChild(td2);            
+        }
+}
+~~~
+
 
 ---
 # 为元素绑定多个事件
