update: class notes

--- a/笔记.md
+++ b/笔记.md
@@ -37,7 +37,7 @@
 #### 总结：
 1. 凡是获取节点的代码，在谷歌和火狐得到的都是相关的节点
 2. 凡是获取元素的代码，在谷歌和火狐得到的都是相关的元素
-3. 从子节点和兄弟节点开始，凡是获取系欸但的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
+3. 从子节点和兄弟节点开始，凡是获取节点的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
 ---
 # 元素创建的不同方式
 1. document.write("标签的代码及内容");
@@ -89,6 +89,7 @@ my$("btn").onclick=function(){
     obj.id="btn2";
     my$("dv").appendChild(obj);
 }
+~~~
     2. 无则创建
 ~~~js
 my$("btn").onclick=function(){
@@ -161,20 +162,20 @@ my$("btn").onclick=function(){
 
 
 ---
-# 为元素绑定多个事件
-- 参数1：事件的类型type---事件的名字，e.g. click,没有on   
-- 参数2：事件处理函数--（命名函数，匿名函数）   
-- 参数3：布尔类型，目前就写false
-       
-#### 对元素绑定事件（DOM）:一种，但是不兼容，有2种
+# 为元素添加/绑定多个事件
+ 为同一个元素绑定同一个事件，避免前面的事件被后面添加的事件所覆盖 
+#### 对元素绑定事件（DOM）:一种方式，但是不兼容，所有有2种
 1. 对象.addEventListener("事件类型", 事件处理函数, false)  *谷歌火狐支持，IE8不支持*
+    - 参数1：事件的类型type---事件的名字，e.g. click,没有on   
+    - 参数2：事件处理函数--（命名函数，匿名函数）   
+    - 参数3：布尔类型，目前就写false
  ~~~html
 <input type="button" value="按钮" id="btn">
 ~~~
 ~~~js
 var btn=document.getElementById("btn");
 btn.addEventListener("click", function(){
-    console.log ("绑定事件");
+    console.log ("添加/绑定事件");
 }, false);
  ~~~
  2. 对象.attachEvent("有on的事件类型", 事件处理函数) *谷歌火狐不支持，IE8支持*
@@ -186,16 +187,20 @@ btn.attachEvent("onclick", function(){
  ### 为任意元素，绑定任意的事件:    
  ~~~js
 function addEventListener(element, type, fn){
-    *判断浏览器是否支持这个方法*   
+    //判断浏览器是否支持这个方法  
     if(element.addEventListener){
         element.addEventListener(type, fn, false);
     } else if (elment.attachEvent){
         element.attachEvent("on"+type, fn);
     } else{
-         element["on"+type]=fn; *对象.onclick也可以写成对象["onclick"]*
+         element["on"+type]=fn; //对象.onclick也可以写成对象["onclick"]
     }
 }
-addEventListener(btn, "click", function(){
-    console.log("验证是否正确");
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确1");
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确2");
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确3");
 });
  ~~~
