--- a/笔记.md
+++ b/笔记.md
@@ -37,13 +37,12 @@
 #### 总结：
 1. 凡是获取节点的代码，在谷歌和火狐得到的都是相关的节点
 2. 凡是获取元素的代码，在谷歌和火狐得到的都是相关的元素
-3. 从子节点和兄弟节点开始，凡是获取节点的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。
----
+3. 从子节点和兄弟节点开始，凡是获取节点的代码在IE8中得到的都是元素；获取元素的代码，在IE8中得到的都是undefined。即：元素的代码，IE中不支持。 
+-------
 # 元素创建的不同方式
 1. document.write("标签的代码及内容");
     - document write() 这种方式有缺陷，如果在页面加载完毕时，使用此方法创建元素，页面所有的东西都会被覆盖；
 2. 对象.innerHTML="标签及代码"；
-
     - 对象.innerHTML的方式，点一次就加载一次，若把内容放在body里，则body里的其他内容会被覆盖，一般是放到其他父级元素里；
 ~~~js
 //动态创建列表
@@ -76,8 +75,9 @@ while (my$("dv").firstElementChild){
     my$("dv").removeChild(my$("dv").fisrtElementChild);
 }
 ~~~
-2. 只创建一个元素:有则删除/无则创建
-    1. 有则删除
+2. 只创建一个元素:有则删除/无则创建 
+
+   1. 有则删除
 ~~~js
 my$("btn").onclick=function(){
     if(my$("btn2")){
@@ -90,7 +90,7 @@ my$("btn").onclick=function(){
     my$("dv").appendChild(obj);
 }
 ~~~
-    2. 无则创建
+ 2. 无则创建   
 ~~~js
 my$("btn").onclick=function(){
     if(!my$("btn2")){
@@ -164,8 +164,9 @@ my$("btn").onclick=function(){
 ---
 # 为元素添加/绑定多个事件
  为同一个元素绑定同一个事件，避免前面的事件被后面添加的事件所覆盖 
-#### 对元素绑定事件（DOM）:一种方式，但是不兼容，所有有2种
-1. 对象.addEventListener("事件类型", 事件处理函数, false)  *谷歌火狐支持，IE8不支持*
+#### 对元素绑定事件（DOM）:一种方式，但是不兼容，所以有2种
+1. 对象.addEventListener("事件类型", 事件处理函数, false)  
+*谷歌火狐支持，IE11支持，IE8不支持；当中的this指当前事件的对象*
     - 参数1：事件的类型type---事件的名字，e.g. click,没有on   
     - 参数2：事件处理函数--（命名函数，匿名函数）   
     - 参数3：布尔类型，目前就写false
@@ -178,13 +179,14 @@ btn.addEventListener("click", function(){
     console.log ("添加/绑定事件");
 }, false);
  ~~~
- 2. 对象.attachEvent("有on的事件类型", 事件处理函数) *谷歌火狐不支持，IE8支持*
+ 2. 对象.attachEvent("有on的事件类型", 事件处理函数)    
+  *谷歌火狐、IE11不支持，IE8支持；当中的this指window*
 ~~~js
 btn.attachEvent("onclick", function(){
     console.log("IE8绑定事件");
 })
 ~~~
- ### 为任意元素，绑定任意的事件:    
+ ### 为任意元素绑定任意事件兼容代码:    
  ~~~js
 function addEventListener(element, type, fn){
     //判断浏览器是否支持这个方法  
@@ -196,6 +198,77 @@ function addEventListener(element, type, fn){
          element["on"+type]=fn; //对象.onclick也可以写成对象["onclick"]
     }
 }
+//测试
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确1");
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确2");
+addEventListener(my$("btn"), "click", function(){
+    console.log("验证是否正确3");
+});
+ ~~~
+ ### 为元素解绑事件   
+ 点击第二个按钮，把第一个按钮的点击事件解绑   
+ *注意：用什么方式绑定事件，就用什么方式解绑*  
+ - 方式1：   
+ 对象.on事件名字=事件处理函数--->绑定事件   
+ 对象.on事件名字=null；---->解绑
+ ~~~js
+my$("btn").onclick=function(){
+    console.log("绑定事件");
+}
+my$("btn2").onclick=function(){
+    my$("btn").onclick=null;
+};
+ ~~~
+ - 方式2：      
+ *使用此方法解绑事件，需要在绑定事件时，使用命名函数*
+~~~js
+//使用此方法解绑事件，需要在绑定事件时，使用命名函数
+function f1(){
+    console.log("第一个");
+}
+function f2(){
+    console.log("第二个");
+}
+my$("btn").addEventListener("click",f1,false);
+my$("btn").addEventListener("click",f2,false);
+//点击第二个按钮，把第一个按钮的第一个点击事件解绑
+my$("btn2").onclick=function(){
+    my$("btn").removeEventListener("click",f1,false);
+};
+~~~
+- 方式3：   
+对象.attachEvent("on事件类型",命名函数);--->绑定事件   
+对象.detachEvent("on事件类型",命名函数);--->解绑
+~~~js
+//使用此方法解绑事件，需要在绑定事件时，使用命名函数
+function f1(){
+    console.log("第一个");
+}
+function f2(){
+    console.log("第二个");
+}
+my$("btn").attachEvent("onclick",f1);
+my$("btn").attachEvent("onclick",f2);
+//点击第二个按钮，把第一个按钮的第一个点击事件解绑
+my$("btn2").onclick=function(){
+    my$("btn").detachEvent("onclick",f1);
+};
+~~~
+### 解绑事件兼容代码
+ ~~~js
+function removeEventListener(element, type, fn){
+    //判断浏览器是否支持这个方法  
+    if(element.removeEventListener){
+        element.removeEventListener(type, fn, false);
+    } else if (elment.detachEvent){
+        element.detachEvent("on"+type, fn);
+    } else{
+         element["on"+type]=null; //对象.onclick也可以写成对象["onclick"]
+    }
+}
+//测试
 addEventListener(my$("btn"), "click", function(){
     console.log("验证是否正确1");
 addEventListener(my$("btn"), "click", function(){
