switch to branch webapi/day4, and update notes

--- a/笔记.md
+++ b/笔记.md
@@ -277,3 +277,72 @@ addEventListener(my$("btn"), "click", function(){
     console.log("验证是否正确3");
 });
  ~~~
+ # 事件冒泡   
+ 事件冒泡：多个事件嵌套，有层次关系，这些元素都注册了相同事件，如果里面元素的事件触发了，外面元素的事件自动触发，这种现象叫做事件冒泡。
+ ~~~html
+ <div id="dv1" style="width:500px; height:500px; background:red" >
+    <div id="dv2" style="width:300px; height:300px; background:blue">
+        <div id="dv3" style="width:100px; height:100px; background:green"></div>
+    </div>
+ </div>
+ ~~~
+ ~~~js
+my$("dv1").onclick=function(){
+    console.log(this.id);
+}
+my$("dv2").onclick=function(){
+    console.log(this.id);
+}
+my$("dv3").onclick=function(){
+    console.log(this.id);
+}
+ ~~~
+#### 阻止事件冒泡
+- window.event.cancelBubble=true; IE特有，谷歌支持，火狐不支持
+- e.stopPropagation();  谷歌和火狐支持，IE8不支持
+ ~~~js
+my$("dv1").onclick=function(){
+    console.log(this.id);
+}
+my$("dv2").onclick=function(){
+    console.log(this.id);
+}
+//事件处理参数对象：e,需要的时候填，不需要的时候不填
+my$("dv3").onclick=function(e){
+    console.log(this.id);
+    condole.log(e);
+    //IE特有，谷歌支持，火狐不支持
+    window.event.cancelBubble=true;
+    //谷歌和火狐支持，IE8不支持e
+    e.stopPropagation();
+}
+ ~~~
+ # 总结事件
+ 事件有3个阶段：该属性在事件参数对象中存在
+ 1. 事件捕获阶段：从外向内
+ 2. 事件目标阶段：最开始选则的那个
+ 3. 事件冒泡阶段： 从里向外   
+
+ 为元素绑定事件
+ - addEventListener("没有on的事件类型", 事件处理函数, 控制事件阶段的true/false)。事件触发的过程中，可能会出现事件冒泡的效果，为了阻止事件冒泡：
+ - window.event.cancelBubble=true;--->谷歌和IE8支持
+ - e.stopPropagation();--->火狐支持   
+ - window.event和e都是事件参数对象，一个是IE标准，一个是火狐的标准
+ - 事件参数e在IE8的浏览器不存在，此时用window.event来代替；
+ - addEventListener的第三个参数是控制事件阶段的，事件阶段有三个：
+ - 通过e.eventPhase这个属性可以知道当前事件是什么阶段   
+    1--->捕获阶段   
+    2--->目标阶段   
+    3--->冒泡阶段   
+    一般都是默认冒泡阶段，很少用捕获阶段
+ ~~~js
+//同时注册点击事件
+var objs=[my$("dv3"), my$("dv2"), my$("dv1")];
+//遍历注册事件
+objs.forEach(function(ele){
+//为每个元素绑定事件
+ele.addEventListener("click",function(){
+    console.log(this.id+"=====>"+e.eventPhase);
+},false)
+});
+ ~~~
