--- a/笔记.md
+++ b/笔记.md
@@ -320,7 +320,7 @@ my$("dv3").onclick=function(e){
  # 总结事件
  事件有3个阶段：该属性在事件参数对象中存在
  1. 事件捕获阶段：从外向内
- 2. 事件目标阶段：最开始选则的那个
+ 2. 事件目标阶段：最开始选择的那个
  3. 事件冒泡阶段： 从里向外   
 
  为元素绑定事件
@@ -334,7 +334,7 @@ my$("dv3").onclick=function(e){
     1--->捕获阶段   
     2--->目标阶段   
     3--->冒泡阶段   
-    一般都是默认冒泡阶段，很少用捕获阶段
+    一般都是默认冒泡阶段，很少用捕获阶段   
  ~~~js
 //同时注册点击事件
 var objs=[my$("dv3"), my$("dv2"), my$("dv1")];
